--- a/ticketing-system/src/main/resources/application.properties
+++ b/ticketing-system/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=ticketing-system
 
-spring.datasource.url=jdbc:mysql://oop-project.c7sgqu6yoiyv.ap-southeast-1.rds.amazonaws.com:3306/OOP_Project
+spring.datasource.url=jdbc:mysql://is442.cucdaamat4rk.ap-southeast-1.rds.amazonaws.com:3306/OOP_Project
 spring.datasource.username=admin
-spring.datasource.password=Password123
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Configuration
