added email function during transaction

--- a/ticketing-system/src/main/resources/application.properties
+++ b/ticketing-system/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#kill me pls 
+spring.mail.host = smtp-relay.brevo.com
+spring.mail.port = 587
+spring.mail.username = jiawei.ang.2022@scis.smu.edu.sg
+spring.mail.password = dnOJVTy1Laq9G7g8
+spring.mail.properties.mail.smtp.auth = true 
+spring.mail.properties.mail.smtp.starttls.enable = true
