clear private keys

--- a/ticketing-system/src/main/resources/application.properties
+++ b/ticketing-system/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=ticketing-system
 
-spring.datasource.url=jdbc:mysql://is442.cucdaamat4rk.ap-southeast-1.rds.amazonaws.com:3306/OOP_Project
-spring.datasource.username=admin
-spring.datasource.password=password
+spring.datasource.url=<<database_url>>
+spring.datasource.username=<<database_username>>
+spring.datasource.password=<<database_password>>
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Configuration
